@@ -1,3 +1,9 @@
+systemd-genie (1.42) buster bullseye bookworm sid focal bionic; urgency=medium
+
+        * Regression fixes.
+
+ -- Alistair Young <avatar@arkane-systems.net>  Thu, 13 May 2021 05:40:00 -0500
+
 systemd-genie (1.41) buster bullseye bookworm sid focal bionic; urgency=medium
 
         * Moved user-runtime-dir@.service override to ExecStartPost.
